# AUREON

./: .gitignore  BLOG_POST.md  CHANGELOG.md  CONTRIBUTORS.md  DEMO_APPLICATION.md  GITHUB_SETUP.md  LICENSE  MIGRATION_GUIDE.md  MISSION_COMPLETE.md  Makefile  PERFORMANCE_BENCHMARKS.md  PROJECT_SUMMARY.md  README.md  README_GITHUB.md  TEST_RESULTS.md  VIDEO_TUTORIAL_SCRIPT.md  alembic.ini  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 001_initial.py
helm/aureon/templates/: _helpers.tpl
nginx/: nginx.conf
scripts/: benchmark_mlflow.py  demo.py  generate_sample_data.py  init-db.sql  run_tests.py
tests/: conftest.py  test_api.py  test_comprehensive.py  test_data_pipeline.py  test_models.py  test_services.py
tests/benchmarks/: test_benchmarks.py
tests/integration/: test_integration.py
tests/performance/: test_performance.py
